component 완성 및 css순서 주석

--- a/html/index.html
+++ b/html/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>no login pages</title>
-    <link rel="stylesheet" href="../assets/css/base/variables.css">
-    <link rel="stylesheet" href="../assets/css/base/reset.css">
-    <link rel="stylesheet" href="../assets/css/base/common.css">
-    <link rel="stylesheet" href="../assets/css/base/layout.css">
+    <link rel="stylesheet" href="../assets/css/base/variables.css"> /*변수&색상 선언*/
+    <link rel="stylesheet" href="../assets/css/base/reset.css"> /*기본 여백 삭제*/
+    <link rel="stylesheet" href="../assets/css/base/components.css"> /*디자인 정의*/
+    <link rel="stylesheet" href="../assets/css/base/layout.css"> /*배치*/
 </head>
 <body>
     <header class="header">
