--- a/html/index.html
+++ b/html/index.html
@@ -8,38 +8,31 @@
     <link rel="stylesheet" href="../assets/css/base/reset.css">
     <link rel="stylesheet" href="../assets/css/base/components.css">
     <link rel="stylesheet" href="../assets/css/base/layout.css">
+    <link rel="stylesheet" href="../assets/css/components/gnb.css" />
+    <link rel="stylesheet" href="../assets/css/components/modal.css" />
 </head>
 <body>
-    /*로고 클릭시 홈으로*/
-    <header class="header">
-            <h1 class="logo-home">
-                <a href="./index.html"><img src="../assets/images/Logo-hodu.png" alt="HODU"></a>
-            </h1>
-            
-            <section class="search">
-                <h2 class="ir">상품 검색</h2>
-                <form action="#" class="search-form">
-                    <label for="main-search" class="ir">검색어 입력</label>
-                    <input type="search" id="main-search" placeholder="상품을 검색해보세요!" required>
-                    <button type="submit" class="btn-search">
-                        <img src="../assets/images/search.png" alt="검색">
+    <header>
+        <div class="container gnb-container"> 
+            <div class="search-container">
+                <h1 class="logo"><img src="../assets/images/Logo-hodu.png"></h1>
+                <div class="search-form">
+                    <input type="text" class="search-input" placeholder="상품을 검색해보세요!">
+                    <button class="btn-search"><img src="../assets/images/icon-search.svg"></button>
+                </div>
+            </div>
+            <div class="user-menu">
+                <button class="cart-btn">장바구니</button> 
+                <div class="dropdown-container">
+                    <button class="login-btn" id="login-btn">
+                        <span id="user-status-login">로그인</span>
                     </button>
-                </form>
-            </section>
-        </div>
-
-            <section class="user-menu">
-                <h2 class="ir">사용자 메뉴</h2>
-                <ul>
-                    <li><a href="#" class="link-cart">
-                        <img src="../assets/images/icon-shopping-cart.svg" alt="" class="icon">
-                        <span>장바구니</span></a></li>
-                    <li>
-                        <a href="./login/login.html" class="link-login">
-                            <img src="../assets/images/icon-user.svg" alt="" class="icon">
-                            <span>로그인</span></a></li>
-                </ul>
-            </section>
+                    <div id="mypage-dropdown" class="dropdown-menu">
+                        <button type="button" id="mypage-btn" class="menu-item">마이페이지</button>
+                        <button type="button" id="logout-btn" class="menu-item">로그아웃</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
