feat: 회원가입 UI 작업 중 PULL

--- a/html/signup/index.html
+++ b/html/signup/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signup</title>
-    <link rel="stylesheet" href="../assests/css/base/variables.css">
-    <link rel="stylesheet" href="../assests/css/base/reset.css">
-    <link rel="stylesheet" href="../assests/css/base/components.css">
-    <link rel="stylesheet" href="../assests/css/base/layout.css">
+    <link rel="stylesheet" href="../assets/css/base/variables.css">
+    <link rel="stylesheet" href="../assets/css/base/reset.css">
+    <link rel="stylesheet" href="../assets/css/base/components.css">
+    <link rel="stylesheet" href="../assets/css/base/layout.css">
+    <link rel="stylesheet" href="../assets/css/components/gnb.css" />
+    <link rel="stylesheet" href="../assets/css/components/modal.css" />
+
   </head>
   <body>
     <header class="header-signup">
