feat: add CTA action buttons for purchase flow (#2)
- 주문 영역에 버튼 그룹(btn-group) UI 레이어 추가
- 즉시 구매용 .M-button 버튼 배치
- 장바구니 진입용 .M-dark-button 버튼 배치
- 가격·수량·API 바인딩 로직과 분리된 순수 액션 트리거 영역으로 구성
- 이후 JS 이벤트 바인딩을 위한 명확한 클릭 타겟 DOM 제공
- 다른 페이지에서도 재사용 가능한 CTA 버튼 패턴으로 구조 고정

--- a/html/products/detail.html
+++ b/html/products/detail.html
@@ -52,6 +52,10 @@
                 </div>
             </div>
         </div>
+        <div class="btn-group">
+            <button class="M-button">바로구매</button>
+            <button class="M-dark-button">장바구니</button>
+        </div>
     </div>
 </section>
 
