feat: add tab navigation structure for product info sections (#2)
- product-info 영역에 탭 헤더(product-info_header) UI 추가
- 활성 탭용 .tab-Activ-button 및 비활성 탭용 .tab-Disabled-button 클래스 구조 정의
- 리뷰, Q&A, 반품/교환정보 등 다중 섹션 전환을 위한 버튼 슬롯 배치
- 탭 콘텐츠 렌더링을 위한 product-info_body 컨테이너 제공
- 탭 클릭 하드닝 로직(52bf21c)이 직접 제어할 수 있는 DOM 계층 구조 반영
- UI 상태(active/disabled)와 JS 제어 대상이 분리되지 않도록 단일 구조로 고정

--- a/html/products/detail.html
+++ b/html/products/detail.html
@@ -59,7 +59,15 @@
     </div>
 </section>
 
-    <section class="product-info"></section>
+    <section class="product-info">
+        <header class="product-info_header">
+            <button class="tab-Activ-button">버튼</button>
+            <button class="tab-Disabled-button">리뷰</button>
+            <button class="tab-Disabled-button">Q&A</button>
+            <button class="tab-Disabled-button">반품/교환정보</button>
+        </header>
+        <div class="product-info_body"></div>
+    </section>
 
     </div>
 </main>
