feat: 푸터 UI 구현 및 공통 링크 스타일 초기화 (#19)
- 하단 푸터 영역 마크업 및 레이아웃 스타일링 (html, css)

- SNS 아이콘 배치 및 서비스 정보(사업자 정보 등) 섹션 구현

- reset.css에 모든 a 태그의 텍스트 데코레이션(밑줄) 제거 설정 추가

- 푸터 내 반응형 레이아웃 대응 작업

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/css/base/layout.css">
     <link rel="stylesheet" href="/assets/css/components/gnb.css" />
     <link rel="stylesheet" href="/assets/css/components/modal.css" />
+    <link rel="stylesheet" href="/assets/css/components/footer.css" />
 </head>
 <body>
     <header>
@@ -150,8 +151,41 @@
 
     <footer class="footer">
         <div class="container">
-            <h2 class="ir">서비스 정보</h2>
-            <p>위니브 정보</p> </div>
+            <div class="footer-top">
+                <ul class="footer-links">
+                    <li><a href="#">호두샵 소개</a></li>
+                    <span class="divider">|</span>
+                    <li><a href="#">이용약관</a></li>
+                    <span class="divider">|</span>
+                    <li><a href="#">개인정보처리방침</a></li>
+                    <span class="divider">|</span>
+                    <li><a href="#">전자금융거래약관</a></li>
+                    <span class="divider">|</span>
+                    <li><a href="#">청소년보호정책</a></li>
+                    <span class="divider">|</span>
+                    <li><a href="#">제휴문의</a></li>
+                </ul>
+                <ol class="sns-links">
+                    <li><button type="button"><img src="/assets/images/icon-insta.svg" alt="인스타그램"></button></li>
+                    <li><button type="button"><img src="/assets/images/icon-fb.svg" alt="페이스북"></button></li>
+                    <li><button type="button"><img src="/assets/images/icon-yt.svg" alt="유튜브"></button></li>
+                </ol>
+            </div>
+
+            <!-- 위 / 아래 구분선 -->
+            <div class="row-divider"></div>
+            
+            <address class="footer-info">
+                <p class="company-name">(주)HODU SHOP</p>
+                <p>제주특별자치도 제주시 동광로 137 제주코딩베이스캠프</p>
+                <div class="biz-info">
+                    <span>사업자 번호 : 000-0000-0000</span>
+                    <span class="divider">|</span>
+                    <span>통신판매업</span>
+                </div>
+                <p>대표 : 김호두</p> 
+            </address>
+        </div>
     </footer>
     <script src="/assets/js/components/gnb.js"></script>
     <script src="/assets/js/components/modal.js"></script>
