feat: 판매자 유형 전용 '판매자 센터' 버튼 추가 및 헤더 스타일링
user_type이 SELLER일 경우 장바구니 대신 판매자 센터 노출 로직 구현

HTML 구조 내 seller-btn 추가 및 아이콘 레이아웃 구성

gnb.css 내 display: flex 레이아웃 및 반응형 폰트 변수 적용

에러 메시지 노출 시 .input-group 여백 유동 제어 CSS 추가

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 </div>
             </div>
             <div class="user-menu">
+                <button class="seller-btn" id="seller-btn">
+                    <img src="./assets/images/icon-shopping-bag.svg">
+                    <p class="seller-txt">판매자 센터</p>
+                </button>
                 <button class="cart-btn">장바구니</button> 
                 <div class="dropdown-container">
                     <button class="login-btn" id="login-btn">
@@ -187,7 +191,7 @@
             </address>
         </div>
     </footer>
-    <script src="/assets/js/components/gnb.js"></script>
-    <script src="/assets/js/components/modal.js"></script>
+    <script type="module" src="/assets/js/components/gnb.js"></script>
+    <script type="module" src="/assets/js/components/modal.js"></script>
 </body>
 </html>
