feat: 전역 모달 시스템 도입 및 로그인·상세 페이지 유효성 로직 개선
로그인: 아이디/비밀번호 미입력 시 포커스 이동 및 실패 시 비밀번호 필드 초기화 로직 구현
모달: getModalHTML을 통한 컴포넌트화 및 window.showGlobalModal 전역 함수 등록
API/스토리지: 리프레시 토큰 저장 로직 추가 및 배너 데이터 슬라이싱 최적화
상세페이지: DOM 요소 참조 오류 해결을 위한 HTML ID 부여 및 JS 선택자 수정
GNB/푸터: 검색, 로그아웃, 마이페이지 등 미구현 영역에 전역 안내 모달 연결

--- a/html/products/detail.html
+++ b/html/products/detail.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="order-meta">
-                    <p class="shipping"></p>
+                    <p id="shipping" class="shipping"></p>
                     <div class="order-meta_amount">
                         <div class="amount">
                             <button class="minus"></button>
