--- a/html/signup/index.html
+++ b/html/signup/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="../../assets/css/base/reset.css">
     <link rel="stylesheet" href="../../assets/css/base/components.css">
     <link rel="stylesheet" href="../../assets/css/base/layout.css">
+    <link rel="stylesheet" href="../../assets/css/components/modal.css">
     <link rel="stylesheet" href="../../assets/css/pages/signup.css">
     <link rel="icon" href="/assets/images/favicon.ico">
 </head>
 <body>
     <header class="header-signup">
-    <h1 class="logo-home">
-            <a href="../../html/signup/index.html" aria-label = "호두 오픈마켓 회원가입 페이지 메인으로 이동">
-                <img src="../../assets/images/Logo-hodu.svg" alt="HODU"></a>
+        <h1 class="logo-home">
+            <a href="../../index.html" aria-label = "호두 오픈마켓 회원가입 페이지 메인으로 이동">
+            <img src="../../assets/images/Logo-hodu.svg" alt="HODU"></a>
         </h1>
     </header>
     
@@ -118,6 +119,7 @@
        </form>
       </div>
     </main>
+    <script type="module" src="../../assets/js/components/modal.js"></script>
     <script type="module" src="../../assets/js/pages/signup.js"></script>
 </body>
 </html>
