--- a/html/products/detail.html
+++ b/html/products/detail.html
@@ -66,6 +66,7 @@
                     <button type="button" class="btn-dark M-dark-button">장바구니</button>
                 </nav>
             </section>
+        </section>
 
         <section class="product-info" aria-labelledby="info-title">
             <h2 id="info-title" class="ir">상품 상세 정보</h2>
