fix: html & css 클래스명 불일치

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </ol>
         </section>
 
-        <section class="product-item" aria-labelledby="product-title">
+        <section class="product-section" aria-labelledby="product-title">
             <h2 id="product-title" class="ir">전체 판매 상품 목록</h2>
             <ul class="product-list"></ul>
         </section>
